<resources>
    <string name="app_name">mobilefinal</string>
    
    <string name="usernameHint">User Id</string>
    <string name="passwordHint">Password</string>
    <string name="login">Login</string>
    <string name="register">Register New Account</string>
    <string name="fullname">Name</string>
    <string name="age">Age</string>
    <string name="profilesetup">Profile Setup</string>
    <string name="myfriends">My Friends</string>
    <string name="signout">Sign Out</string>
    <string name="back">Back</string>
    <string name="todos">Todos</string>
    <string name="post">Post</string>
    <string name="albums">Albums</string>
</resources>
