<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="35dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/myfriend_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Hello"
                        android:textSize="26dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/myfriend_todos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/todos"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/myfriend_post"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/post"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/myfriend_albums"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/albums"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/myfriend_backbtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/back"
                        android:textStyle="bold"
                        android:textSize="20dp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>