<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="35dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/home_hello"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Hello"
                        android:textSize="26dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/home_quote"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="this is"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/home_profilesetupbtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profilesetup"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/home_myfriendsbtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/myfriends"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/home_signoutbtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/signout"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>